--- a/home/clubs/aeromodellingClub/assets/css/style.css
+++ b/home/clubs/aeromodellingClub/assets/css/style.css
@@ -1485,3 +1485,95 @@ Features tabs style
     line-height: 32px;
   }
 }
+.messagebox{
+	width:100%;
+	background-color: #D9F7F7;
+	border-radius:5px;
+	min-height:50px;
+	height:auto;
+	overflow:hidden;
+}
+
+.message{
+	width:46%;
+	font-weight:200;
+	font-size:130%;
+	float:right;
+	height:auto;
+	padding:2%;
+}
+
+.message a{
+	text-decoration:none;
+	color:blue;
+
+}
+
+.linkers{
+	position:absolute;
+	bottom:0;
+}
+
+.headerr{
+	padding-left: 2%;
+	padding-top: 2%;
+	font:inherit;
+	font-size:200%;
+	font-weight:700;	
+	color: #ffa300;
+}
+
+.timedate{
+	font-weight:100;
+	font-size:80%;
+}
+
+.imagegame{
+	width:50%;
+	padding:2%;
+	float:left;
+	border-radius:25px;
+}
+
+.imagebod{
+	border-radius:25px;
+}
+
+.messagebox1{
+	background-color: #D9F7F7;
+	border-radius:5px;
+	min-height:50px;
+	height: auto;
+	overflow: hidden;
+}
+
+.boxText1{
+	background-color:#FFFFFF;
+	padding-top:10px;
+	border-radius:5px;
+	height: auto;
+	max-width:auto;
+	overflow: hidden;
+	font-size:10px;
+}
+
+.nameText1{
+	font-size:20px;
+};
+
+.aaa1{
+	position: absolute;
+    left: -100%;
+    right: -100%;
+    top: -100%;
+    bottom: -100%;
+    margin: auto; 
+	width: auto;
+}
+
+.temp>img{
+	width:47%;
+	margin:4px;
+}
+
+
